syntax = "proto3";

package mana;

enum ManaSource {
  ANY = 0;
  BARRACKS_OF_THE_THOUSAND = 1;
  CAVE = 2;
  TREASURE = 3;
}

enum Mana {
  WHITE = 0;
  BLUE = 1;
  BLACK = 2;
  RED = 3;
  GREEN = 4;
  COLORLESS = 5;
}

enum ManaRestriction {
  NONE = 0;
  ACTIVATE_ABILITY = 1;
  ARTIFACT_SPELL_OR_ABILITY = 2;
}